--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,20 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Kelvin Brito is a Frontend Developer who loves solving problems and developing aesthetically pleasing sites through best code practices, UI/UX design focus, and the usage of today's innovative technologies. Find out more on britojs.com"
+        />
+        <meta
+            name="keywords"
+            content="front-end developer, software developer, ui/ux, design, reactjs, javascript, HTML, CSS, Kelvin Brito, programming, software development, frontend, coding, brito, britojs, "
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>React App</title>
+        <!-- Ionicons -->
+        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+
+        <title>Kelvin Brito | Front End Software Engineer</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
