--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             name="keywords"
             content="front-end developer, software developer, ui/ux, design, reactjs, javascript, HTML, CSS, Kelvin Brito, programming, software development, frontend, coding, brito, britojs, "
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="apple-touch-icon" href="./favicon.ico" />
 
         <!-- Ionicons -->
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
