edit meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Kelvin Brito is a Frontend Developer who loves solving problems and developing aesthetically pleasing sites through best code practices, UI/UX design focus, and the usage of today's innovative technologies. Find out more on britojs.com"
-        />
-        <meta
-            name="keywords"
-            content="front-end developer, software developer, ui/ux, design, reactjs, javascript, HTML, CSS, Kelvin Brito, programming, software development, frontend, coding, brito, britojs, "
-        />
-        <link rel="apple-touch-icon" href="./favicon.ico" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Kelvin Brito is a front end software engineer specializing in building & designing exceptional, high-quality websites and applications."
+    />
 
-        <!-- Ionicons -->
-        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <link rel="apple-touch-icon" href="./favicon.ico" />
 
-        <!-- Fonts -->
+    <!-- Ionicons -->
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap"
-            rel="stylesheet"
-        />
+    <!-- Fonts -->
 
-        <title>Kelvin Brito | Front End Software Engineer</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Kelvin Brito</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
